# pawprint

./: README.md  cli.py  pawprint.py  pyproject.toml
catprinter/: ble.py  cmds.py  img.py  md_render.py  sniff.py  ui.py
catprinter/templates/: default.css  page.html
demo/: todo.md
demo/styles/: big.css
tests/: test_ble_flow.py  test_cli_orient.py  test_cmds.py  test_image.py  test_md_render.py  test_pawprint_orient.py
