[project]
name = "catprinter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak==0.22.3",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "playwright>=1.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
