[project]
name = "catprinter"
version = "0.1.0"
description = "pawprint - CLI for the MXW01 thermal cat printer."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bleak==0.22.3",
    "numpy==2.2.4",
    "opencv-python==4.11.0.86",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "playwright>=1.40",
]

[project.scripts]
pawprint = "pawprint:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# pawprint.py lives at the repo root (not inside the catprinter package) so
# the wheel needs both: the package directory AND the top-level module that
# the `pawprint` console script's entry point resolves to.
[tool.hatch.build.targets.wheel]
only-include = ["catprinter", "pawprint.py"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
